--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
-.main-block {
-  margin: 0 auto;
+.header {
+  padding: 30px 0;
+  display: grid;
+  grid-template-columns: repeat(2, 110px);
+  justify-content: center;
 }
+
+.header a {
+  text-decoration: none;
+  font-size: 20px;
+  color: black;
+}
+.header a:hover {
+  color: blue;
+}
+
+.header a.active {
+  text-decoration: underline;
+  color: blue;
+}
+
